# sourcegraph

./: .bazelrc  .eslintrc.js  .prettierignore  WORKSPACE  deps.bzl  flake.nix  go.mod  go.sum  gulpfile.js  package.json  pnpm-lock.yaml  sg.config.yaml  shell.nix  vitest.shared.ts  vitest.workspace.ts
.aspect/bazelrc/: ci.sourcegraph.bazelrc  defaults.bazelrc
client/branded/: BUILD.bazel  vitest.config.ts
client/browser/: vitest.config.ts
client/codeintellify/: vitest.config.ts
client/shared/: BUILD.bazel  vitest.config.ts
client/vscode/: CHANGELOG.md  package.json
client/web/: BUILD.bazel  bundlesize.config.js  package.json  vitest.config.ts
client/web-sveltekit/: BUILD.bazel  package.json  svelte.config.js  vite.config.ts
client/web-sveltekit/src/routes/: Header.svelte
client/wildcard/: BUILD.bazel  vitest.config.ts
client/wildcard/src/: index.ts  render-with-branded-context.tsx  testSetup.test.ts
cmd/frontend/graphqlbackend/: codeintel.codenav.graphql  codeintel.graphql  external_services.go  external_services_test.go  git_commit.go  schema.graphql  user.go  users.go
cmd/gitserver/internal/: BUILD.bazel  patch.go  server.go
dev/: BUILD.bazel  mocha.bzl  oci_deps.bzl
dev/app/: build-backend.sh
dev/authtest/: site_admin_test.go
dev/ci/: bazel-prechecks-apply.sh  bazel-prechecks.sh
dev/gqltest/: bitbucket_projects_perms_sync_test.go  external_service_test.go  sub_repo_permissions_test.go
dev/nix/: comby.nix  ctags.nix  nodejs.nix  overlay.nix  overlay1.nix  p4-fusion.nix  util.nix
dev/sg/: sg_ci.go
dev/tst/: BUILD.bazel  BUILD.bazel.orig  action.go  builder.go  config.go  core.go  github_client.go  github_scenario.go  org.go  org2.go  repo.go  repo2.go  repo_test.go  reporter.go  scenario.go  store.go  team.go  team2.go  user.go  user2.go  users.go  util.go
dev/tst/cmd/: BUILD.bazel  main.go  main_test.go
dev/tst/config/: config.go
dev/update-embeddings-list/: package.json
docker-images/prometheus-gcp/: Dockerfile
internal/codygateway/: types.go
internal/conf/: BUILD.bazel  init.go
internal/ctags_config/: ctags_config.go
internal/database/: event_logs.go  mocks_temp.go  schema.json  schema.md  sub_repo_perms_store.go  users.go  users_test.go
internal/executor/: BUILD.bazel
internal/extsvc/: types.go
internal/httpcli/: BUILD.bazel  client.go
internal/ratelimit/: BUILD.bazel  globallimiter.go  globallimiter_test.go  rate_limit.go
internal/rcache/: BUILD.bazel  rcache.go
internal/repos/: bitbucketcloud.go  bitbucketserver.go  exclude.go  exclude_test.go  gerrit.go  github.go  github_test.go  go_packages.go  npm_packages.go  pagure.go  python_packages.go  ruby_packages.go  rust_packages.go
internal/symbols/: BUILD.bazel
internal/types/: types.go
internal/usagestats/: BUILD.bazel
migrations/codeinsights/: squashed.sql
migrations/codeintel/: squashed.sql
migrations/frontend/: squashed.sql
schema/: github.schema.json  schema.go  settings.schema.json  site.schema.json
testing/: BUILD.bazel
third-party-licenses/: ThirdPartyLicenses.csv
ui/assets/: .gitignore  manifest.go
(+248 files in other folders)
