load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_run_binary", "js_run_devserver")
load("@npm//:vite/package_json.bzl", vite_bin = "bin")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

# gazelle:ignore

SRCS = [
    "package.json",
    "vite.config.ts",
    "svelte.config.js",
    "tsconfig.json",
    ".eslintignore",
    ".eslintrc.cjs",
    ".prettierignore",
    ".env",
    ".env.dotcom",
    ".env.oss",
    "//client/wildcard:sass-breakpoints",
    "//client/wildcard:global-style-sources",
    "//ui/assets/img:copy",
] + glob(["src/" + d for d in [
    "**/*.scss",
    "**/*.svg",
    "**/*.ts",
    "**/*.svelte",
    "**/*.html",
    "**/*.tsx",
]])

BUILD_DEPS = [
    ":node_modules/@remix-run/router",
    ":node_modules/@sourcegraph/branded",
    ":node_modules/@sourcegraph/common",
    ":node_modules/@sourcegraph/http-client",
    ":node_modules/@sourcegraph/shared",
    ":node_modules/@sourcegraph/web",
    ":node_modules/@sourcegraph/wildcard",
    ":node_modules/@storybook/svelte",
    ":node_modules/@sveltejs/kit",
    ":node_modules/@sveltejs/adapter-static",
    ":node_modules/@types/prismjs",
    ":node_modules/prismjs",
    ":node_modules/react",
    ":node_modules/svelte",
    ":node_modules/lodash-es",
    ":node_modules/@popperjs/core",
    ":node_modules/ts-key-enum",
    "//:node_modules/@codemirror/autocomplete",
    "//:node_modules/@codemirror/commands",
    "//:node_modules/@apollo/client",
    "//:node_modules/@codemirror/state",
    "//:node_modules/@codemirror/view",
    "//:node_modules/@mdi/js",
    "//:node_modules/@types/lodash",
    "//:node_modules/@types/node",
    "//:node_modules/@types/react",
    "//:node_modules/lodash",
    "//:node_modules/react-router-dom",
    "//:node_modules/rxjs",
    "//:node_modules/react-dom",
    "//:node_modules/path-browserify",
    "//:node_modules/react-resizable",
    "//:node_modules/@reach/combobox",
    "//:node_modules/@reach/menu-button",
    "//:node_modules/uuid",
    "//:node_modules/classnames",
    "//:node_modules/open-color",
]

CONFIGS = [
    "//client/branded:tsconfig",
    "//client/common:tsconfig",
    "//client/http-client:tsconfig",
    "//client/shared:tsconfig",
    "//client/web:tsconfig",
    "//client/wildcard:tsconfig",
    "//:tsconfig",
    "//:postcss_config_js",
]

npm_link_all_packages(name = "node_modules")

vite_bin.vite(
    name = "web-sveltekit",
    srcs = SRCS + BUILD_DEPS + CONFIGS,
    args = [
        "build",
        "-c vite.config.ts",
    ],
    chdir = package_name(),
    outs= ["build"],
    env = {
        "BAZEL": "1",
    }
)
