load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tst",
    srcs = ["core.go"],
    importpath = "github.com/sourcegraph/sourcegraph/dev/tst",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/errors",
        "@com_github_google_go_github//v53/github",
    ],
)
